# NjtechQuickLogin

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/: ci.yml
.github/workflows/: auto.yml  ci.yml
src/: main.rs
