[package]
name = "NjtechQuickLogin"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.10.1"
serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
toml = "0.8.19"
log = "0.4.22"
serde_json = "1.0.128"
daemonize = { version = "0.5.0" }
clap = {version = "4.5.20", features = ["derive"]}
# surge-ping = { version = "0.8.1" }
# ping = "0.5.2"

[profile.release]
opt-level = "z"
lto = true
